// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`OneToOne Decorator should add metadata 1`] = `
{
  "columns": [
    {
      "decorator": "PrimaryKeyColumn",
      "enum": null,
      "fallback": [Function],
      "key": "id",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "readonly": true,
      "schema": null,
      "type": "uuid",
    },
  ],
  "entity": {
    "cache": null,
    "database": null,
    "decorator": "Entity",
    "name": "OneToOneFirstDecoratorEntity",
    "namespace": null,
  },
  "extras": [],
  "generated": [],
  "hooks": [],
  "indexes": [],
  "primaryKeys": [
    "id",
  ],
  "primarySource": null,
  "relations": [
    {
      "findKeys": {
        "id": "secondId",
      },
      "foreignConstructor": [Function],
      "foreignKey": "first",
      "joinKeys": {
        "secondId": "id",
      },
      "joinTable": null,
      "key": "second",
      "options": {
        "loading": "ignore",
        "nullable": false,
        "onDestroy": "ignore",
        "onInsert": "ignore",
        "onOrphan": "ignore",
        "onUpdate": "ignore",
        "strategy": null,
      },
      "type": "OneToOne",
    },
  ],
  "schemas": [],
  "target": [Function],
}
`;

exports[`OneToOne Decorator should add metadata 2`] = `
{
  "columns": [
    {
      "decorator": "PrimaryKeyColumn",
      "enum": null,
      "fallback": [Function],
      "key": "id",
      "max": null,
      "min": null,
      "nullable": false,
      "optional": false,
      "readonly": true,
      "schema": null,
      "type": "uuid",
    },
  ],
  "entity": {
    "cache": null,
    "database": null,
    "decorator": "Entity",
    "name": "OneToOneSecondDecoratorEntity",
    "namespace": null,
  },
  "extras": [],
  "generated": [],
  "hooks": [],
  "indexes": [],
  "primaryKeys": [
    "id",
  ],
  "primarySource": null,
  "relations": [
    {
      "findKeys": {
        "secondId": "id",
      },
      "foreignConstructor": [Function],
      "foreignKey": "second",
      "joinKeys": null,
      "joinTable": null,
      "key": "first",
      "options": {
        "loading": "ignore",
        "nullable": false,
        "onDestroy": "ignore",
        "onInsert": "ignore",
        "onOrphan": "ignore",
        "onUpdate": "ignore",
        "strategy": null,
      },
      "type": "OneToOne",
    },
  ],
  "schemas": [],
  "target": [Function],
}
`;
